feat(cors): add new allowed origin and refactor config
- add Vercel preview deployment URL to allowed origins
- rename cors config variable for clarity
- convert allowed headers from Arrays.asList to List.of